# syncp

./: README.md  meson.build  syncp.1.ronn  syncp.c
po/: POTFILES  meson.build  ru.po  syncp.pot
